detalles menores de form crear/editar direccion

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <!-- MDB -->
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" />
     <title>
-    {% block head_title %}{% endblock head_title %}
+    {% block head_title %}sproj4{% endblock head_title %}
     </title>
     {% block extra_head %}{% endblock extra_head %}
   </head>
