--- a/templates/perfiles/edit_addresses.html
+++ b/templates/perfiles/edit_addresses.html
@@ -1,33 +1,47 @@
 {% extends "base.html" %}
-{% block title %}Edit Addresses{% endblock %}
+{% block head_title %}Crear-Editar dirección{% endblock %}
 
 {% block content %}
-<div class="col-6 mx-auto">
-  <h1 class="h3">Create/Edit Address</h1>
-  <div>Add a new delivery <b>address</b> and delivery preferences</div>
-  <hr />
-  <form name="address_form" class="account-form" method="post" enctype="multipart/form-data">
-    {% if form.errors %}
-      <div class="alert alert-primary" role="alert">
-        Error: Please try again!
-      </div>
-    {% endif %}
-    {% csrf_token %}
-    <label class="small fw-bold">{{ form.residencia_address.label}}</label>
-    {{ form.residencia_address }}
-    <label class="small fw-bold">{{ form.oficina_address.label}}</label>
-    {{ form.oficina_address }}
-    <label class="small fw-bold">{{ form.ciudad.label}}</label>
-    {{ form.ciudad }}
-    <label class="small fw-bold">{{ form.departamento.label}}</label>
-    {{ form.departamento }}
-    <label class="small fw-bold">{{ form.zip.label}}</label>
-    {{ form.zip }}
-    <button class="btn btn-primary btn-block py-2 mb-4 mt-4 fw-bold w-100" type="button" value="Submit" onclick="submitForm()">
-    Add Address
-    </button>
-  </form>
+<div class="container py-3">
+      <form name="address_form" class="account-form" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="row">
+          <div class="col-8 mx-auto">
+            <h1 class="h3">Crear/Editar Dirección</h1>
+            <div>Agregue una nueva <b>dirección</b> y preferencias de envío</div>
+            <hr />
+            {% if form.errors %}
+              <div class="alert alert-primary" role="alert">
+                Error: Por favor trate nuevamente!
+              </div>
+            {% endif %}
+            <div class="mb-3">
+              <label for="direccionResidencia" class="form-label">{{ form.residencia_address.label}}</label>
+                {{ form.residencia_address }}
+            </div>
+            <div class="mb-3">
+              <label class="form-label">{{ form.oficina_address.label}}</label>
+                {{ form.oficina_address }}
+            </div>
+            <div class="mb-3">
+              <label class="form-label">{{ form.ciudad.label}}</label>
+              {{ form.ciudad }}
+            </div>
+            <div class="mb-3">
+              <label class="form-label">{{ form.departamento.label}}</label>
+              {{ form.departamento }}
+            </div>
+            <div class="mb-3">
+              <label class="form-label">{{ form.zip.label}}</label>
+              {{ form.zip }}
+            </div>
 
+            <button class="btn btn-primary btn-block py-2 mb-4 mt-4 fw-bold w-100" type="button" value="Submit" onclick="submitForm()">
+            Agregar dirección
+            </button>
+          </div>
+        </div>
+      </form>
 </div>
 
 <script>
