retoques checkout y direccion de envio

--- a/templates/perfiles/edit_addresses.html
+++ b/templates/perfiles/edit_addresses.html
@@ -8,7 +8,7 @@
         <div class="row">
           <div class="col-8 mx-auto">
             <h1 class="h3">Crear/Editar Dirección</h1>
-            <div>Agregue una nueva <b>dirección</b> y preferencias de envío</div>
+            <div>Agregue o edite una <b>dirección</b> de envío</div>
             <hr />
             {% if form.errors %}
               <div class="alert alert-primary" role="alert">
