--- a/templates/perfiles/addresses.html
+++ b/templates/perfiles/addresses.html
@@ -20,7 +20,7 @@
                   <path
                     d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
                 </svg>
-                <h1 class="h5">Add Address</h1>
+                <h1 class="h5">Agregar Dirección</h1>
               </div>
             </div>
           </div>
@@ -63,10 +63,10 @@
             </dl>
           </div>
           <div class="card-footer bg-light">
-            <a class="btn btn-warning btn-sm text-decoration-none" href="{% url 'perfiles:edit_address' address.id %}">Edit</a>
-            <a class="btn btn-danger btn-sm text-decoration-none" href="{% url 'perfiles:delete_address' address.id %}">Delete</a>
+            <a class="btn btn-warning btn-sm text-decoration-none" href="{% url 'perfiles:edit_address' address.id %}">Editar</a>
+            <a class="btn btn-danger btn-sm text-decoration-none" href="{% url 'perfiles:delete_address' address.id %}">Eliminar</a>
             {% if not address.default %}
-              <a class="btn btn-info btn-sm text-decoration-none" href="{% url 'perfiles:set_default' address.id %}">Set Default</a>
+              <a class="btn btn-info btn-sm text-decoration-none" href="{% url 'perfiles:set_default' address.id %}">Por defecto</a>
             {% endif %}
           </div>
         </div>
