--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
           <a class="mx-3" href="#">Ver todas</a>
         </div>
         <div class="row">
-          {% for post in posts %}
+          {% for articulo in articulos %}
             <div class="col-md-6 col-lg-3 mb-4">
               <div class="card h-100">
                 <div class="d-flex justify-content-between p-3">
@@ -39,11 +39,11 @@
                     <p class="text-white mb-0 small">x4</p>
                   </div>
                 </div>
-                <a href="{{ post.get_absolute_url }}">
+                <a href="{{ articulo.get_absolute_url }}">
                   <img
-                    src="{{ object.product.image.url }}"
+                    src="{{ articulo.inventory.products.get.imagenes.first.image.url }}"
                     class="card-img-top"
-                    alt="{{ post.inventory.product.products }}"
+                    alt="{{ articulo.inventory.products.get.imagenes.first.alt_text }}"
                     style="height:207px"
                   />
                 </a>
@@ -51,26 +51,26 @@
                   <div class="d-flex justify-content-between">
                     <p class="small">
                       <a href="#!" class="text-muted">
-                        {% for category in post.inventory.product.category.all %}
-                            {{ category }}
+                        {% for category in articulo.inventory.products.get.category.all %}
+                            {{ category}}
                         {% endfor %}
                       </a>
                     </p>
-                    {% if post.inventory.product.discount_price %}
+                    {% if articulo.inventory.products.get.discount_price %}
                       <p class="small text-danger">
-                        <s>${{ post.inventory.product.store_price|intcomma }}</s>
+                        <s>$ {{ articulo.inventory.products.get.store_price|intcomma }}</s>
                       </p>
                     {% endif %}
                   </div>
 
                   <div class="d-flex justify-content-between mb-3">
-                    <a href="{{ post.get_absolute_url }}" class="text-decorations-none">
-                      <h5 class="mb-0">{{ post.title }}</h5>
+                    <a href="{{ articulo.get_absolute_url }}" class="text-decorations-none">
+                      <h5 class="mb-0">{{ articulo.title }}</h5>
                     </a>
-                    {% if post.inventory.product.discount_price %}
-                      <h5 class="text-dark mb-0">${{ post.inventory.product.discount_price|intcomma }}</h5>
+                    {% if articulo.inventory.products.get.discount_price %}
+                      <h5 class="text-dark mb-0">$ {{ articulo.inventory.products.get.discount_price|intcomma }}</h5>
                     {% else %}
-                      <h5 class="text-dark mb-0">${{ post.inventory.product.store_price|intcomma }}</h5>
+                      <h5 class="text-dark mb-0">$ {{ articulo.inventory.products.get.store_price|intcomma }}</h5>
                     {% endif %}
                   </div>
 
@@ -87,15 +87,15 @@
                 </div>
               </div>
             </div>
-           {% empty %}
-              <div class="alert alert-warning d-flex align-items-center" role="alert">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
-                  <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                </svg>
-                <div>
-                  No hay publicación de productos para mostrar!
-                </div>
+          {% empty %}
+            <div class="alert alert-warning d-flex align-items-center" role="alert">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+              </svg>
+              <div>
+                No hay publicación de productos para mostrar!
               </div>
+            </div>
           {% endfor %}
           {% include "pagination.html" with page=page_obj %}
         </div> <!-- /row -->
