--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -17,8 +17,8 @@
           <div class="row g-0">
             <div class="col-md-5 d-flex justify-content-end">
               <img
-                src="{{ object.media.image.url }}"
-                alt="{{ object.media.alt_text }}"
+                src=""
+                alt=""
                 class="img-fluid"
               />
             </div>
