--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -11,56 +11,63 @@
 {% block content %}
   <div class = "container">
     <h1>Shopping Cart</h1>
-    <table class='table'>
-      <thead>
-        <tr>
-          <th>Image</th>
-          <th>Product</th>
-          <th>Quantity</th>
-          <th>Remove</th>
-          <th>Unit Price</th>
-          <th>Price</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for item in cart %}
-          {% with  product=item.product  %}
-            <tr>
-              <td>
-                <a href="{{ product.get_absolute_url }}">
-                  <img height="35" src="{% if product.inventory.product.media.image %}{{ product.inventory.product.media.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
-                </a>
-              </td>
-              <td> {{ product.title }} </td>
-              <td>
-                <form action="{% url 'cart:cart_add' product.id %}" method="POST">
-                  {% csrf_token %}
-                  {{ item.update_quantity_form.quantity }}
-                  {{ item.update_quantity_form.override }}
-                  <input type="submit" value="Update">
-                </form>
-              </td>
-              <td>
-                <form action="{% url 'cart:cart_remove' product.id %}" method="post">
-                  <input type="submit" value="Remove">
-                  {% csrf_token %}
-                </form>
-              </td>
-              <td class="num">$ {{ item.price|intcomma }}</td>
-              <td class="num">$ {{ item.total_price|intcomma }}</td>
-            </tr>
-          {% endwith %}
-        {% endfor %}
-        <tr class="total">
-          <td>Total</td>
-          <td colspan="4"></td>
-          <td class="num">$ {{ cart.get_total_price|intcomma }}</td>
-        </tr>
-      </tbody>
-    </table>
-    <p class="text-right">
-      <a href="{% url 'store:home' %}" class="btn btn-primary">Continue Shopping</a>
-      <a href="{% url 'cart:checkout' %}" class="btn btn-warning">CheckOut</a>
-    </p>
+    {% if cart %}
+      <table class='table'>
+        <thead>
+          <tr>
+            <th>Image</th>
+            <th>Product</th>
+            <th>Quantity</th>
+            <th>Remove</th>
+            <th>Unit Price</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in cart %}
+            {% with  product=item.product  %}
+              <tr>
+                <td>
+                  <a href="{{ product.get_absolute_url }}">
+                    <img height="35" src="{% if product.inventory.products.get.imagenes.first.image %}{{ product.inventory.products.get.imagenes.first.image.url }}{% else %}{% static 'img/default.png' %}{% endif %}">
+                  </a>
+                </td>
+                <td> {{ product.title }} </td>
+                <td>
+                  <form action="{% url 'cart:cart_add' product.id %}" method="POST">
+                    {% csrf_token %}
+                    {{ item.update_quantity_form.quantity }}
+                    {{ item.update_quantity_form.override }}
+                    <input type="submit" value="Update">
+                  </form>
+                </td>
+                <td>
+                  <form action="{% url 'cart:cart_remove' product.id %}" method="post">
+                    <input type="submit" value="Remove">
+                    {% csrf_token %}
+                  </form>
+                </td>
+                <td class="num">$ {{ item.price|intcomma }}</td>
+                <td class="num">$ {{ item.total_price|intcomma }}</td>
+              </tr>
+            {% endwith %}
+          {% endfor %}
+          <tr class="total">
+            <td>Total</td>
+            <td colspan="4"></td>
+            <td class="num">$ {{ cart.get_total_price|intcomma }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <p class="text-right">
+        <a href="{% url 'store:home' %}" class="btn btn-primary">Continue Shopping</a>
+        <a href="{% url 'cart:checkout' %}" class="btn btn-warning">CheckOut</a>
+      </p>
+    {% else %}
+      <div class="alert alert-warning">No hay productos agregados a tu carrito de compras</div>
+      <p class="text-right">
+        <a href="{% url 'store:home' %}" class="btn btn-primary">Continue Shopping</a>
+      </p>
+    {% endif %}
   </div>
 {% endblock content %}
