--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -28,22 +28,27 @@
           <h2>Productos</h2>
           <a class="mx-3" href="#">Ver todos</a>
         </div>
-        {% if media %}
+        {% if products %}
           <div class="row">
-            {% for product in media %}
+            {% for product in products %}
               <div class="col-md-3 col-lg-2 mb-4">
                 <div class="card h-100">
                   <a href="{% url 'products:media_detail' product.id %}">
+
                     <img
-                      src="{{ product.media.image.url }}"
+                      src="{{ product.imagenes.first.image.url }}"
                       class="card-img-top"
-                      alt="{{ product.media.alt_text }}"
+                      alt="{{ product.imagenes.first.alt_text }}"
                     />
+
                   </a>
 
                   <div class="card-body d-flex align-items-end">
                     <p class="card-text">
-                      {{ product.description}}
+
+                    </p>
+                    <p class="card-text">
+                      {{ product.description }}
                     </p>
                   </div>
                   <div class="card-footer d-flex">
@@ -56,7 +61,7 @@
             {% endfor %}
           </div> <!-- /row -->
         {% else %}
-          <p class="alert alert-info">No hay productos disponibles</p>
+          <p class="alert alert-info">No hay productos disponibles!</p>
         {% endif %}
       </div>
     </section>
