--- a/templates/cart/checkout.html
+++ b/templates/cart/checkout.html
@@ -19,102 +19,107 @@
         </div>
     </div>
     <div class="container py-3">
-            <div class="row">
-                <div class="col-md-6 mb-md-0">
-                        <h2 class="h3 mb-3 text-black text-center">dirección de envío</h2>
-                        <hr />
-                        <div>
-                            {% for address in addresses %}
-                                {% if address.default %}
-                                        <div class="col-12">
-                                            <div class="card">
-                                                <div class="card-body small pb-1">
-                                                    <dl class="row">
-                                                    <dt class="col-sm-4">Residencia:</dt>
-                                                    <dd class="col-sm-8">
-                                                        {{address.residencia_address}}
-                                                    </dd>
-                                                    {% if address.oficina_address %}
-                                                        <dt class="col-sm-4">Oficina:</dt>
-                                                        <dd class="col-sm-8">
-                                                        {{address.oficina_address}}
-                                                        </dd>
-                                                    {% endif %}
-                                                    <dt class="col-sm-4">Ciudad:</dt>
-                                                    <dd class="col-sm-8">
-                                                        {{address.ciudad}}
-                                                    </dd>
-                                                    <dt class="col-sm-4">Departamento:</dt>
-                                                    <dd class="col-sm-8">
-                                                        {{address.departamento}}
-                                                    </dd>
-                                                    <dt class="col-sm-4">Zip code:</dt>
-                                                    <dd class="col-sm-8">
-                                                        {{address.zip}}
-                                                    </dd>
-                                                    </dl>
-                                                </div>
-                                            </div>
+        <div class="row">
+            <div class="col-md-6 mb-md-0">
+                <h2 class="h3 mb-3 text-black text-center">dirección de envío</h2>
+                <hr />
+                <div>
+                    {% for address in addresses %}
+                        {% if address.default %}
+                                <div class="col-12">
+                                    <div class="card">
+                                        <div class="card-body small pb-1">
+                                            <dl class="row">
+                                            <dt class="col-sm-4">Residencia:</dt>
+                                            <dd class="col-sm-8">
+                                                {{address.residencia_address}}
+                                            </dd>
+                                            {% if address.oficina_address %}
+                                                <dt class="col-sm-4">Oficina:</dt>
+                                                <dd class="col-sm-8">
+                                                {{address.oficina_address}}
+                                                </dd>
+                                            {% endif %}
+                                            <dt class="col-sm-4">Ciudad:</dt>
+                                            <dd class="col-sm-8">
+                                                {{address.ciudad}}
+                                            </dd>
+                                            <dt class="col-sm-4">Departamento:</dt>
+                                            <dd class="col-sm-8">
+                                                {{address.departamento}}
+                                            </dd>
+                                            <dt class="col-sm-4">Zip code:</dt>
+                                            <dd class="col-sm-8">
+                                                {{address.zip}}
+                                            </dd>
+                                            </dl>
                                         </div>
-                                        <div class="text-center pt-2" >
-                                            <a href="{% url 'perfiles:direcciones' %}" type="button">cambiar direccion de envío</a>
-                                        </div>
-                                {% else %}
-                                    <p> No has configurado dirección por defecto</p>
-                                    <a href="{% url 'perfiles:direcciones' %}" type="button">configurar direccion de envío</a>
-                                {% endif %}
-                            {% empty %}
-                                    <p class="text-danger">Aún no has configurado una dirección de envío, ve a tu perfil y agrega tu dirección por defecto</p>
-                                    <a href="{% url 'perfiles:direcciones' %}" type="button">configurar direccion de envío</a>
-                            {% endfor %}
-                        </div>
-                        <div class="p-2 p-lg-2">
-
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success btn-lg py-3 btn-block">
-                                Continuar con el pago
-                            </button>
-                        </div>
+                                    </div>
+                                </div>
+                                <div class="text-center pt-2" >
+                                    <a href="{% url 'perfiles:direcciones' %}" type="button">cambiar direccion de envío</a>
+                                </div>
+                        {% else %}
+                            <p> No has configurado dirección por defecto</p>
+                            <a href="{% url 'perfiles:direcciones' %}" type="button">configurar direccion de envío</a>
+                        {% endif %}
+                    {% empty %}
+                        <p class="text-danger">Aún no has configurado una dirección de envío, ve a tu perfil y agrega tu dirección por defecto</p>
+                        <a href="{% url 'perfiles:direcciones' %}" type="button">configurar direccion de envío</a>
+                    {% endfor %}
+                </div>
+                <div class="p-2 p-lg-2">
 
                 </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2 class="h3 mb-3 text-black text-center">Detalles del pedido</h2>
-                            <hr>
-                            <div class="p-3 p-lg-5">
-                                <table class="table site-block-order-table">
-                                    <thead>
-                                            <th>Product</th>
-                                            <th>Total</th>
-                                    </thead>
-                                    <tbody>
-                                        {% for item in cart %}
-                                        <tr>
-                                            <td>
-                                                {{ item.product.title }}
-                                                <strong class="mx-2">x</strong> {{ item.quantity }}
-                                            </td>
-                                            <td>
-                                                $ {{ item.total_price|intcomma }}
-                                            </td>
-                                        </tr>
-                                        {% endfor %}
-                                        <tr>
-                                            <td><strong class="text-black font-weight-bold">Subtotal</strong></td>
-                                            <td>$ {{ cart.get_total_price|intcomma }}</td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>Order Total</strong></td>
-                                            <td><strong class="text-black font-weight-bold">$ {{ cart.get_total_price|intcomma }}</strong></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                <div class="">
+                    <a href="{% url 'cart:cart_detail' %}" class="btn btn-warning btn-lg" tabindex="-1" role="button">
+                        Regresar al Carrito
+                    </a>
+                    <a class="btn btn-primary btn-lg" tabindex="-1" role="submit">
+                        Continuar con el Pago
+                    </a>
+                    {% comment %} <button type="submit" class="btn btn-success">
+                        Continuar con el pago
+                    </button> {% endcomment %}
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="h3 mb-3 text-black text-center">Detalles del pedido</h2>
+                        <hr>
+                        <div class="p-3 p-lg-5">
+                            <table class="table site-block-order-table">
+                                <thead>
+                                        <th>Product</th>
+                                        <th>Total</th>
+                                </thead>
+                                <tbody>
+                                    {% for item in cart %}
+                                    <tr>
+                                        <td>
+                                            {{ item.product.title }}
+                                            <strong class="mx-2">x</strong> {{ item.quantity }}
+                                        </td>
+                                        <td>
+                                            $ {{ item.total_price|intcomma }}
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                    <tr>
+                                        <td><strong class="text-black font-weight-bold">Subtotal</strong></td>
+                                        <td>$ {{ cart.get_total_price|intcomma }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Order Total</strong></td>
+                                        <td><strong class="text-black font-weight-bold">$ {{ cart.get_total_price|intcomma }}</strong></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
-            </div> <!-- /row -->
+            </div>
+        </div> <!-- /row -->
     </div> <!-- /container -->
 {% endblock content %}
